# rathole-desktap

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
.trae/documents/: Internationalization & Theme Configuration Plan.md  RatholeDesktop Development Plan.md
src/: App.vue  i18n.ts  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: PageHeader.vue  Sidebar.vue
src/locales/: en-US.ts  zh-CN.ts
src/router/: index.ts
src/stores/: config.ts  rathole.ts  systemStats.ts  theme.ts  ui.ts
src/views/: About.vue  Dashboard.vue  Download.vue  Logs.vue  ProxyConfig.vue  Settings.vue
