[package]
name = "rathole-desktop"
version = "0.0.1"
description = "Rathole Desktop GUI"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.2.4", features = ["tray-icon"] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-fs = "2.2.0"
tauri-plugin-dialog = "2.2.0"
tauri-plugin-process = "2.2.0"
tauri-plugin-http = "2.2.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["blocking", "json"] }
zip = "2.2.2"
directories = "5.0"
toml = "0.8"
anyhow = "1.0"
chrono = "0.4"
